tests/paczka1/small_fuzzy/74351262.err
Error in line 1: mhLRykthK S171 81,6
Error in line 6: S171 S171 17,5
Error in line 12: gpX3 S300 45,8
